--- a/layouts/particles/simple-list.njk
+++ b/layouts/particles/simple-list.njk
@@ -1,5 +1,5 @@
 <ul class="simple-list">
-  {% for item in items %}
-    <li>{{ item.name }}</li>
+  {% for select in selection %}
+    <li>{{ select.item }}</li>
   {% endfor %}
 </ul>
