--- a/template-styles/list.css
+++ b/template-styles/list.css
@@ -1,1 +1,15 @@
-.list-wrapper {}
+.list-wrapper {
+  .logo-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+
+    li {
+      img {
+        width: 200px;
+        height: 200px;
+      }
+    }
+  }
+}
