fixed logo alt text

--- a/layouts/particles/logo-list.njk
+++ b/layouts/particles/logo-list.njk
@@ -2,7 +2,7 @@
   {% for select in selection %}
     <li>
       <a href="{{ select.url }}">
-        <img src="{{ select.logo }}" alt="{{ select.item }}" />
+        <img src="{{ select.logo }}" alt="{{ select.title }}" />
       </a>
     </li>
   {% endfor %}
