--- a/template-styles/list.css
+++ b/template-styles/list.css
@@ -1,5 +1,5 @@
 .list-wrapper {
-  .logo-list {
+  .logos-list {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -10,6 +10,89 @@
         width: 200px;
         height: 200px;
       }
+    }
+  }
+
+  .cards-list {}
+
+  .flip-cards-list {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 50px 0;
+  
+    @media (max-width: 500px) {
+      padding: 30px 0;
+    }
+  
+    li {
+      width: 360px;
+      height: 290px;
+      padding: 10px;
+    }
+  
+    .flip-card-wrapper {
+      background-color: transparent;
+      height: 100%;
+      width: 100%;
+      perspective: 1000px;
+    }
+  
+    .flip-card,
+    .flip-card-back  {
+      display: inline-block;
+      position: relative;
+      height: 100%;
+      width: 100%;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 10px;
+      padding: 30px 40px;
+      color: #fff;
+      transition: transform 0.8s;
+      transform-style: preserve-3d;
+  
+      @media (max-width: 500px) {
+        padding: 20px;
+      }
+  
+      h3 {
+        font-size: 22px;
+      }
+  
+      p {
+        font-size: 18px;
+        margin-top: 0;
+      }
+    }
+  
+    .flip-card-back {
+      p {
+        color: #000;
+      }
+    }
+  
+    .flip-card-wrapper:hover .flip-card {
+      transform: rotateY(180deg);
+    }
+  
+    .flip-card, 
+    .flip-card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+    }
+  
+    .flip-card-back {
+      background-color: $color-secondary;
+      transform: rotateY(180deg);
+    }
+  
+    .flip-card-wrapper:hover .flip-card-back {
+      transform: rotateY(0deg);
     }
   }
 }
