--- a/layouts/list.njk
+++ b/layouts/list.njk
@@ -29,8 +29,14 @@
 
   {# get the selected items from the source list #}
   {# refData is a meta variable that contains data for the site #}
-  {% set selection = refData[source] | getSelections(selections) %}
+
+  {% if params.list.selectAll %}
+    {% set selection = refData[source] %}
+  {% else %}
+    {% set selection = refData[source] | getSelections(selections) %}
+  {% endif %}
   
   {% include "sections/particles/lists/" + template + ".njk" ignore missing %}
+
 </div>
 
