--- a/template-styles/lists.css
+++ b/template-styles/lists.css
@@ -1,5 +1,8 @@
 .list-wrapper {
   
+  /**
+    * Base styles for a Logos List
+    */
   .logos-list-display {
     position: relative;
 
@@ -57,9 +60,68 @@
     }
   }
   
+  /**
+    * Base styles for a Cards List
+    */
+  .cards-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 2rem;
 
-  .cards-list {}
+    li {
+      align-self: stretch;
+    }
 
+    .card {
+      position: relative;
+      border: 1px solid #f0f0f0;
+      padding: 2rem 2rem 5rem;
+      max-width: 30rem;
+      height: 100%;
+      display: grid;
+      row-gap: 1rem;
+      grid-template-rows: min-content min-content min-content min-content min-content 1fr;
+      grid-template-areas:
+        "media"
+        "title"
+        "prose"
+        "link";
+    }
+
+    & .title {
+      grid-area: title;
+      margin: 0 1rem 0 0;
+    } 
+    & .media {
+      grid-area: media;
+      width: 100%;
+      aspect-ratio: 1;
+      margin-bottom: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        max-width: 80%;
+      }
+    }
+    & .prose {
+      grid-area: prose;
+      margin: 0 1rem 0 0;
+    }
+    & .link {
+      position: absolute;
+      right: 2rem;
+      bottom: 2rem;
+    }
+  } 
+
+/**
+  * Base styles for a Flip Cards List
+  */
   .flip-cards-list {
     width: 100%;
     list-style: none;
