finished flip cards list

--- a/layouts/particles/lists/flip-cards-list.njk
+++ b/layouts/particles/lists/flip-cards-list.njk
@@ -1,14 +1,15 @@
 <ul class="flip-cards-list">
   {% for select in selection %}
-    <li class="flip-card-wrapper">
-      <div class="flip-card">
-        <img src="{{ select.logo }}" alt="{{ select.title }}" />
-        <h3>{{ select.title }}</h3>
-      </div>
-      <div class="flip-card-back">
-        <h3>{{ select.title }}</h3>
-        <p>{{ select.description }}</p>
-        <a href="{{ select.url }}">Learn More</a>
+    <li>
+      <div class="flip-card-wrapper">
+        <div class="flip-card">
+          <img src="{{ select.image }}" alt="{{ select.title }}" />
+        </div>
+        <div class="flip-card-back">
+          <h3>{{ select.title }}</h3>
+          <p>{{ select.description }}</p>
+          <a href="{{ select.url }}">Learn More</a>
+        </div>
       </div>
     </li>
   {% endfor %}
