--- a/template-styles/lists.css
+++ b/template-styles/lists.css
@@ -128,6 +128,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 2rem;
     padding: 50px 0;
   
     @media (max-width: 500px) {
@@ -146,15 +147,21 @@
       width: 100%;
       perspective: 1000px;
     }
+
+    img {
+      max-width: 80%;
+    }
   
     .flip-card,
     .flip-card-back  {
-      display: inline-block;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       position: relative;
       height: 100%;
       width: 100%;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 10px;
+      border: 1px solid #f0f0f0;
       padding: 30px 40px;
       color: #fff;
       transition: transform 0.8s;
