--- a/template-styles/lists.css
+++ b/template-styles/lists.css
@@ -46,7 +46,7 @@
       }
     
       img {
-        max-width: 100%;
+        max-width: var(--logo-width);
         filter: grayscale(100%);
         opacity: 0.5;
         transition: all 0.3s ease-in-out;
@@ -105,7 +105,7 @@
       align-items: center;
 
       img {
-        max-width: 80%;
+        width: 80%;
       }
     }
     & .prose {
@@ -210,6 +210,43 @@
     }
   }
 }
+
+/**
+  * Base styles for a grid
+  */
+  .grid-list {
+    max-width: 31rem;
+    margin: 0 auto;
+    padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    gap: 0.4rem;
+
+    li {
+      border: 1px solid #f0f0f0;
+      aspect-ratio: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        background-color: #f8f8f8;
+      }
+
+      &.no-link:hover {
+        background-color: transparent;
+      }
+
+      img {
+        width: 3rem;
+        height: 3rem;
+
+      }
+    }
+
+  }
 
 @keyframes marquee {
   0% {
