--- a/layouts/image.njk
+++ b/layouts/image.njk
@@ -16,8 +16,8 @@
     alt: ''
     caption: ''
 #}
+{% from "sections/particles/image.njk" import image %}
 
 <div class="image-wrapper section-inner">
-  <img src="{{ params.image.src }}" alt="{{ params.image.alt }}" />
-  <p class="caption">{{ params.image.caption }}</p>
+  {{ image(params) }}
 </div>
