--- a/layouts/text.njk
+++ b/layouts/text.njk
@@ -37,10 +37,10 @@
 
 
 
+{% from "page-sections/particles/text.njk" import text %}
+{% from "page-sections/particles/ctas.njk" import ctas %}
+
 <div class="text-wrapper section-inner">
-
-  {% include "sections/particles/text.njk" %}
-
-  {% include "sections/particles/ctas.njk" %}
-
+  {{ text(params) }}
+  {{ ctas(params) }}
 </div>
