--- a/template-styles/audio.css
+++ b/template-styles/audio.css
@@ -1,10 +1,20 @@
 .audio-wrapper {
-  .prose {
-    & :first-child {
-      margin-top: 0;
-    }
-    & :last-child {
-      margin-bottom: 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow:hidden;
+
+  .audio-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    img {
+      width: 100%;
     }
   }
 }
