changed section name

--- a/layouts/blog-banner.njk
+++ b/layouts/blog-banner.njk
@@ -43,7 +43,7 @@
 {% from "sections/particles/text.njk" import text %}
 {% from "sections/particles/blog-attribution.njk" import blogAttribution %}
 
-<div class="text-wrapper section-inner">
+<div class="blog-banner section-inner">
   {{ text(params) }}
   {{ blogAttribution(blogProps) }}
 </div>
